Add name parameter to swagger models. Fix role being normal string in some places.
