# src/apiHandlers/types.go
@@ -2,7 +2,7 @@ package apiHandlers
 
 // APIErrorCode is an enum that represents the error codes that can be
 // returned by the API.
-type APIErrorCode int
+type APIErrorCode int // @name APIErrorCode
 
 // EndpointResponse is the structure of the response that is sent to the
 // client.
@@ -10,7 +10,7 @@ type EndpointResponse struct {
 	Success bool           `json:"success"`
 	Result  any            `json:"result"`
 	Error   *EndpointError `json:"error"`
-}
+} // @name EndpointResponse
 
 // EndpointError is the structure of the error that is sent to the client.
 type EndpointError struct {
@@ -18,4 +18,4 @@ type EndpointError struct {
 	Message   string       `json:"message"`
 	Origin    string       `json:"origin"`
 	Date      string       `json:"date"`
-}
+} // @name EndpointError
